# qore-ecf-module

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindLZ4F.cmake  config.h.cmake
examples/: data  lz4.q
src/: binarynode_sink.cpp  binarynode_sink.h  ecf_module.cpp  ecf_module.h  lz4_module.cpp  lz4_module.h  ql_ecf.h  ql_ecf.qpp  ql_lz4.h  ql_lz4.qpp  qore_lz4frame.cpp  qore_lz4frame.h  qore_snappy.cpp  qore_snappy.h
